# Engine-Relay

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json
behavior_src/: CMakeLists.txt
behavior_src/character/behaviors/behaviorswitchboard.hkx/: behavior.yaml
behavior_src/character/behaviors/behaviorswitchboard.hkx/clips/: BSB_Idle.yaml
behavior_src/character/behaviors/behaviorswitchboard.hkx/data/: graphdata.yaml
behavior_src/character/behaviors/behaviorswitchboard.hkx/states/: BSB_IdleState.yaml  BSB_SwitchboardSM.yaml
behavior_src/character/character assets/: skeleton.yaml
behavior_src/dragon/behaviors/dragonbehavior.hkx/: behavior.yaml
behavior_src/dragon/behaviors/dragonbehavior.hkx/clips/: CLIP_BigAah.yaml  CLIP_BleedOut1_Enter.yaml  CLIP_BleedOut1_Idle.yaml  CLIP_BleedOut2_Enter.yaml  CLIP_BleedOut2_Exit.yaml  CLIP_BleedOut2_Idle.yaml  CLIP_DST.yaml  CLIP_Death_Agony_End.yaml  CLIP_Death_Agony_Start.yaml  CLIP_Death_Default.yaml  CLIP_Eee.yaml  CLIP_FV.yaml  CLIP_Flight_Default_Cruise_Neck_Roar.yaml  CLIP_Flight_Default_FeatherStop.yaml  CLIP_Flight_Default_Feather_Default.yaml  CLIP_Flight_Default_Feather_Default_Left.yaml  CLIP_Flight_Default_Feather_Default_Right.yaml  CLIP_Flight_Default_Feather_Injured.yaml  CLIP_Flight_Default_Feather_Injured_Left.yaml  CLIP_Flight_Default_Feather_Injured_Right.yaml  CLIP_Flight_Default_Flap_Ascend.yaml  CLIP_Flight_Default_Flap_Ascend_Left.yaml  CLIP_Flight_Default_Flap_Ascend_Right.yaml  CLIP_Flight_Default_Flap_Default.yaml  CLIP_Flight_Default_Flap_Default_Left.yaml  CLIP_Flight_Default_Flap_Default_Right.yaml  CLIP_Flight_Default_Flap_Injured.yaml  CLIP_Flight_Default_Flap_Injured_Left.yaml  CLIP_Flight_Default_Flap_Injured_Right.yaml  CLIP_Flight_Default_Glide_Default.yaml  CLIP_Flight_Default_Glide_Default_Left.yaml  CLIP_Flight_Default_Glide_Default_Right.yaml  CLIP_Flight_Default_Glide_Dive.yaml  CLIP_Flight_Default_Glide_Dive_Left.yaml  CLIP_Flight_Default_Glide_Dive_Right.yaml  CLIP_Flight_Default_Glide_Injured.yaml  CLIP_Flight_Default_Glide_Injured_Left.yaml  CLIP_Flight_Default_Glide_Injured_Right.yaml  CLIP_Flight_Grab.yaml  CLIP_Flight_Injure.yaml  (+174 more)
behavior_src/dragon/behaviors/dragonbehavior.hkx/data/: AccelerationModifier_expressions.yaml  DecelerationModifier_expressions.yaml  DriveRagdollRB_bones_boneIndex.yaml  EEM_Direction_expressions.yaml  EEM_DisableLookAtTarget_expressions.yaml  EEM_Drag_expressions.yaml  EEM_EnableLookAtTarget_Combat_Default_expressions.yaml  EEM_EnableLookAtTarget_Combat_Flight_expressions.yaml  EEM_EnableLookAtTarget_Default_expressions.yaml  EEM_EnableLookAtTarget_Hover_expressions.yaml  EEM_Equip_expressions.yaml  EEM_FeatherStopCheck_expressions.yaml  EEM_FlightPitchBlendTarget_expressions.yaml  EEM_Flight_Default_Cruise_expressions.yaml  EEM_General_expressions.yaml  EEM_Injured_expressions.yaml  EEM_IsAttackReady_expressions.yaml  EEM_LipSync_expressions.yaml  EEM_Locomotion_Direction_expressions.yaml  EEM_LookAt_expressions.yaml  EEM_Move_expressions.yaml  EEM_PathAngle_expressions.yaml  EEM_PitchDeltaDamped_expressions.yaml  EEM_ResetTweenEntryDirection_expressions.yaml  EEM_Reset_Lip_expressions.yaml  EEM_SetTweenEntryDirectionFlightKillGrab_expressions.yaml  EEM_TargetSpeedDampedCalculation_expressions.yaml  EEM_TurnDeltaDamped_expressions.yaml  EEM_Turn_expressions.yaml  EEM_TweenEntryDirectionFlightKillGrab_expressions.yaml  EEM_TweenEntryDirectionPrev_expressions.yaml  EEM_Unequip_expressions.yaml  EEM_Wing_State_expressions.yaml  EEM_bEquipOK_expressions.yaml  EEM_bVoiceReady_expressions.yaml  EEM_iState_Flight_expressions.yaml  EEM_iState_Ground_expressions.yaml  EEM_iState_Hovering_expressions.yaml  EEM_iState_Perching_expressions.yaml  KeyframeFullRagdoll_keyframedBonesList_boneIndex.yaml  (+2 more)
behavior_src/dragon/behaviors/dragonbehavior.hkx/generators/: BLD_Default.yaml  BLD_Flight_Default_Cruise.yaml  BLD_Flight_Default_Feather_Default.yaml  BLD_Flight_Default_Feather_Injured.yaml  BLD_Flight_Default_Flap.yaml  BLD_Flight_Default_Flap_Ascend.yaml  BLD_Flight_Default_Flap_Default.yaml  BLD_Flight_Default_Flap_Injured.yaml  BLD_Flight_Default_Glide.yaml  BLD_Flight_Default_Glide_Default.yaml  BLD_Flight_Default_Glide_Dive.yaml  BLD_Flight_Default_Glide_Injured.yaml  BLD_Flight_Kill_Grab_Enter.yaml  BLD_Furniture_Trap_Idle.yaml  BLD_Ground_Combat_Default.yaml  BLD_Ground_Idle_Default.yaml  BLD_Ground_Locomotion_Forward.yaml  BLD_Hover.yaml  BLD_Hover_Enter_Default.yaml  BLD_Hover_Enter_Vertical.yaml  BLD_Land_Crash_Approach.yaml  BLD_Land_Default_Approach.yaml  BLD_Land_Default_Vertical_Approach.yaml  BLD_Land_Hasty_Approach.yaml  BLD_Land_Hasty_Vertical_Approach.yaml  BLD_Land_Injured_Approach.yaml  BLD_Land_Injured_Vertical_Approach.yaml  BLD_Land_Perch_LakeDive.yaml  BLD_Phoneme.yaml  DragonBSBContainerBFR.yaml  Ground_Mount_Dragon.yaml  KillMove1HMDragonRodeoSlash.yaml  KillMove1HMDragonRodeoStabShort.yaml  KillMove2HMDragonSlash.yaml  KillMove2HWDragonRodeoSlash.yaml  KillMove2HWDragonSlash.yaml  PMG_Get Up.yaml  PMG_Reanimate.yaml  pa_DragonMountEnter.yaml  pa_DragonMountExit.yaml  (+1 more)
behavior_src/dragon/behaviors/dragonbehaviorswitchboard.hkx/: behavior.yaml
behavior_src/dragon/character assets/: skeleton.yaml
cmake/lib/: deployData.cmake
docs/NEXUS/: Nexus_page.md
include/: PCH.h
include/BehaviorSwitchboard/: BSBInterface.h  BSB_API.h
include/EngineRelay/: ERInterface.h  ER_API.h
include/SmoothCam/: SmoothCamAPI.h
include/TrueDirectionalMovement/: TrueDirectionalMovementAPI.h
src/cpp/: BehaviorFileInterceptor.cpp  BehaviorGenerator.cpp  BehaviorPatcher.cpp  Bridge_SmoothCam.cpp  Bridge_TDM.cpp  CameraStateManager.cpp  CharacterStateAllocator.cpp  ConfigLoader.cpp  HkxBsbWriter.cpp  HkxErWriter.cpp  Plugin.cpp  TESCameraStateStubs.cpp  WildcardGate.cpp
src/header/: BSBMemoryStream.h  BehaviorFileInterceptor.h  BehaviorGenerator.h  BehaviorPatcher.h  Bridge_SmoothCam.h  Bridge_TDM.h  CameraStateManager.h  CharacterStateAllocator.h  ConfigLoader.h  ERMemoryStream.h  HavokTypes.h  HkxBsbWriter.h  HkxErWriter.h  WildcardGate.h
(+590 files in other folders)
